# fetch-picker

./: .gitmodules  README.md
applications/: package.xml
applications/launch/: build_map.launch  interactive_gripper.launch  nav_rviz.launch
applications/rviz_setup/: fetchrobot.rviz  gripper_interactive_marker.rviz  navigation.rviz  navigation_with_local_map.rviz  navigation_with_map.rviz
applications/scripts/: arm_home.py  arm_obstacle_demo.py  base_demo.py  cart_arm_demo.py  check_cart_pose.py  ee_pose_demo.py  gripper_intmarker_teleop_demo.py  head_demo.py  interactive_marker_demo.py  interactive_teleop_demo.py  keyboard_teleop.py  marker_demo.py  path_demo.py  pose_record_demo.py  publish_saved_cloud.py  torso_demo.py  transformation_demo.py
collada_web_server/: Caddyfile  run_caddy.bash
perception/: CMakeLists.txt  package.xml
perception/include/perception/: crop.h  downsample.h
perception/launch/: fetch_perception.launch  fetch_rviz.launch  playground.launch
perception/scripts/: camera_client.py  keyboard_teleop.py
perception/src/: crop.cpp  downsample.cpp  point_cloud_demo.cpp  save_cloud  save_cloud_main.cpp
perception/src/perception/: __init__.py  camera.py  mock_camera.py  segmentation.py  utils.py
perception/srv/: GetCloud.srv  GetImage.srv
robot_api/src/robot_api/: __init__.py  arm.py  base.py  gripper.py  head.py  marker.py  pose.py  torso.py
