<?xml version="1.0"?>
<package format="2">
  <name>applications</name>
  <version>0.1.0</version>
  <description>Applications for TECHIN 517A</description>
  <maintainer email="jstn@todo.todo">jstn</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>joint_state_reader</depend>
  <depend>map_annotator</depend>
  <export>
  </export>
</package>
